GNOME Bugzilla – Bug 701525
gi: fix free of dangling pointer
Last modified: 2013-06-12 19:41:31 UTC
object_instance_props_to_g_parameters is sometimes calling g_free on the name variable when name isn't set. This commit fixes that.
Created attachment 245922 [details] [review] gi: fix free of dangling pointer
Review of attachment 245922 [details] [review]: Looks right.
Attachment 245922 [details] pushed as 3fc0b4d - gi: fix free of dangling pointer