gi: fix free of dangling pointer

object_instance_props_to_g_parameters is sometimes calling g_free
on the name variable when name isn't set.

This commit fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=701525